[package]
name = "shed"
version = "0.1.0"
authors = ["Rick Richardson <rick.richardson@gmail.com>"]
edition = "2018"


[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.48"
bincode = "1.3.2"
dashmap = "4.0.2"
futures = "0.3.13"
futures-timer = "3.0.2"
pin-project = "1.0.6"
serde = { version="1.0.125", features=["derive"] }
sled = { git="https://github.com/rrichardson/sled",  branch="main" }
tokio = "1.4.0"

[dev-dependencies]
async-stream = "0.3.0"
derive_manifold = { path = "./derive_manifold" }
tokio = { version = "1.4.0", features = ["full"] }
