[package]
name = "shed"
version = "0.1.0"
authors = ["Rick Richardson <rick.richardson@gmail.com>"]
edition = "2018"


[dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = "1"
dashmap = "4"
futures = "0.3"
futures-timer = "3"
pin-project = "1"
serde = { version="1.0.125", features=["derive"] }
sled = { git="https://github.com/rrichardson/sled",  branch="main" }
tokio = "1"

[dev-dependencies]
async-stream = "0.3"
derive_manifold = { path = "./derive_manifold" }
tokio = { version = "1.4.0", features = ["full"] }
