[package]
name = "shed"
version = "0.1.0"
authors = ["Rick Richardson <rick.richardson@gmail.com>"]
edition = "2018"


[dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = "1"
dashmap = "4"
futures = "0.3"
futures-timer = "3"
parking_lot = "0.11"
pin-project = "1"
serde = { version="1.0.125", features=["derive"] }
sled = { git="https://github.com/rrichardson/sled",  branch="main" }
tokio = "1"
prost = "0.7"
bytes = "1"
byteorder = "1.4.3"
env_logger = "0.8.3"
log = "0.4.14"
serde_json = "1.0.64"

[dev-dependencies]
async-stream = "0.3"
derive_manifold = { path = "./derive_manifold" }
tokio = { version = "1.4.0", features = ["full"] }
