[package]
name = "derive_manifold"
version = "0.1.0"
authors = ["Rick Richardson <rick.richardson@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = { version="1.0.65", features=["full", "extra-traits"] }

[dev-dependencies]
anyhow = "1.0.40"
futures = "0.3.13"
serde = "1.0.125"
serde_derive = "1.0.125"
shed = { path = "../" }
